# Orbit

./: BUILD_INSTRUCTIONS.md  README.md  metadata.json  package-lock.json  package.json  server.ts
.github/workflows/: main.yml  main2.yml  mainversionidekatp.yml  mainvesriondick.yml  min.yml  tauri-build.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
